--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,3 @@
 <h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= user.name %></p>
+<p class="lead mb-3">Welcome <%= user.name ? user.name : user._json.name %></p>
 <a href="/auth/logout" class="btn btn-secondary">Logout</a>
